
######################
#                    #
#      2021.7.3      #
#                    #
######################
New features and other changes:
1. Changed InstallRemote.ps1 so toast notifications don't show on servers.
2. Added SplunkUF and VMwareTools config file items and bumped config version.
3. Added functions Copy-SplunkForwarder and Copy-VMwareTools.

######################
#                    #
#      2021.7.2      #
#                    #
######################
New features and other changes:
1. Made notifier parameter in Send-ToastNotification dynamic.
2. Modified Get-NotificationApp so that it shows the actual Display Name that is displayed on Toast notifications.
3. Added a field to the output of Get-NotificationApp that combines the DisplayName and Name outputs.
4. Added AudioSource, RequireDismiss, and ShortDuration parameters to Send-ToastNotification.
5. Changed default AudioSource in Send-ToastNotification to 'ms-winsoundevent:Notification.Looping.Alarm3'.
6. Changed default Notifier in Send-ToastNotification to Windows.SystemToast.NfpAppAcquire which has a display name of System Notification.
7. Added OperatingSystem check to InstallRemote.ps1. If the computer is a server than it will not schedule a reboot.

######################
#                    #
#      2021.7.1      #
#                    #
######################
New features and other changes:
1. Added Send-ToastNotification to InstallRemote.ps1.
2. Changed ActivClient install in InstallRemote.ps1 to only check Major.Minor version instead of Major.Minor.Revision.
3. Added Toast notifications to several installs in InstallRemote.ps1. It defaults to the "Security and Maintenance" notifier.
4. Added PrintNightmare registry value fixes to Set-RemediationValues.
5. Added function Set-PrintNightmareFix which can be ran against remote computers/servers. Includes a -DisableSpooler switch that can be used when running on the local machine.